[package]
name = "finances-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
openssl = { version = "0.10.60", features = ["vendored"] }
pretty_env_logger = "0.5.0"
teloxide = "0.12.2"
tokio = { version = "1.34.0", features = ["full"] }
